--- a/tp_5_jonatan_santillan/public/index.html
+++ b/tp_5_jonatan_santillan/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Trabajo Práctico N°5</title>
+    <title>Trabajo Práctico N°5 - Santillan Jonatan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
